<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.mctechnic</groupId>
	<artifactId>BlueMapOfflinePlayerMarkers</artifactId>
	<version>1.3.0-BETA</version>
	<packaging>jar</packaging>

	<name>BlueMapOfflinePlayerMarkers</name>

	<description>Adds markers where players have logged off to BlueMap</description>
	<properties>
		<java.version>16</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<url>https://github.com/TechnicJelle/</url>

	<pluginRepositories>
		<pluginRepository>
			<id>maven-snapshots</id>
			<url>https://repository.apache.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.1-SNAPSHOT</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<filters>
								<filter>
									<artifact>com.flowpowered:flow-nbt</artifact>
									<excludes>
										<exclude>META-INF/*.MF</exclude>
									</excludes>
								</filter>
							</filters>
							<createDependencyReducedPom>false</createDependencyReducedPom>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<relocations>
						<relocation>
							<pattern>com.flowpowered.</pattern>
							<shadedPattern>net.mctechnic.shadow.com.flowpowered.</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>

	<repositories>
		<repository>
			<id>papermc-repo</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.papermc.paper</groupId>
			<artifactId>paper-api</artifactId>
			<version>1.17.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.BlueMap-Minecraft</groupId>
			<artifactId>BlueMapAPI</artifactId>
			<version>v1.6.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.flowpowered</groupId>
			<artifactId>flow-nbt</artifactId>
			<version>1.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>
